--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-:root{
+:root {
     --Light-red: hsl(0, 100%, 67%);
     --Orangey-yellow: hsl(39, 100%, 56%);
     --Green-teal: hsl(166, 100%, 37%);
     --Cobalt-blue: hsl(234, 85%, 45%);
-/* gradiants */
+    /* gradiants */
     --Light-slate-blue-background: hsl(252, 100%, 67%);
     --Light-royal-blue-background: hsl(241, 81%, 54%);
 
@@ -11,7 +11,7 @@
     --Persian-blue-circle: hsla(241, 72%, 46%, 0);
 }
 
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -19,30 +19,30 @@
 }
 
 
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
-.container{
+.container {
     display: flex;
     justify-content: center;
-    height: 50vh;
-    width: 50vw;
+    /* height: 50vh;
+    width: 50vw; */
     box-shadow: 0 4px 8px 0 hsl(221, 100%, 96%), 0 6px 20px 0 hsl(221, 100%, 96%);
     border-radius: 20px;
-
+    width: 575px;
 }
-    
+
 
 
 
 /*Result card CSS*/
 
-.result-card{
-    background: linear-gradient( hsl(252, 100%, 67%),hsl(241, 81%, 54%) );
+.result-card {
+    background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -54,73 +54,83 @@ body{
 }
 
 
-.marks{
-    background: linear-gradient( hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
+.marks {
+    background: linear-gradient(hsla(256, 72%, 46%, 1),
+            hsla(241, 72%, 46%, 0));
+    height: 115px;
+    width: 115px;
     border-radius: 50%;
-    height: 35%;
-    width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.heading, .msg, .marks span {
+.heading,
+.msg,
+.marks span {
     color: hsl(241, 100%, 89%);
 }
 
-.marks,  .remark{
+.marks,
+.remark {
     color: hsl(0, 0%, 100%);
     font-weight: 500;
 }
 
-.marks{
+.marks {
     font-weight: 800;
 
 }
 
-.marks span{
+.marks span {
     font-size: 1rem;
 }
-.msg{
-    padding: 0px 55px;
+
+.msg {
+    padding: 0px 26px;
     text-align: center;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 /* Summary card CSS*/
 
-.summary-card{
+.summary-card {
     display: flex;
     flex-direction: column;
     flex: 1;
     row-gap: 0.5rem;
-    padding: 10px 15px;
+    padding: 25px 15px;
     justify-content: space-evenly;
     align-items: center;
 }
-.heading{
+
+.heading {
     font-weight: 500;
 
 }
-.summary{
+
+.summary {
     display: grid;
     width: 80%;
     justify-content: left;
 }
 
-.tests{
+.tests {
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
-    margin:10px 10px;
-    width: 80%;
+    row-gap: 0.5rem;
+    margin: 10px 10px;
+    width: 90%;
 
 }
 
-.reaction,.memory,.verbal,.visual{
+.reaction,
+.memory,
+.verbal,
+.visual {
     border-radius: 10px;
-     display: flex;
+    display: flex;
     align-items: center;
     padding: 10px 10px;
     column-gap: 1rem;
@@ -129,75 +139,83 @@ body{
 
 }
 
-.left, .right{
+.left,
+.right {
     display: flex;
     column-gap: 0.5rem;
 }
 
-.obtained{
+.obtained {
     color: hsl(224, 30%, 27%);
 }
 
-.out-of{
- color: hsla(224, 30%, 27%, 0.5);
+.out-of {
+    color: hsla(224, 30%, 27%, 0.5);
 }
 
-.reaction{
+.reaction {
 
     background-color: hsla(0, 100%, 67%, 0.08);
-    color: var(--Light-red) ;
-    
+    color: var(--Light-red);
+
 }
 
-.memory{
+.memory {
     background-color: hsla(39, 100%, 56%, 0.08);
     color: var(--Orangey-yellow);
 
 }
 
-.verbal{
-    background-color:hsla(166, 100%, 37%, 0.08) ;
+.verbal {
+    background-color: hsla(166, 100%, 37%, 0.08);
     color: var(--Green-teal);
 
 }
 
-.visual{
+.visual {
     background-color: hsla(234, 85%, 45%, 0.08);
     color: var(--Cobalt-blue);
 
 }
 
-.btn{
+.btn {
     background-color: hsl(224, 30%, 27%);
     color: hsl(0, 0%, 100%);
     border-radius: 25px;
-    padding: 15px 10px;
-    width: 16rem;
-    font-size: 18px;
+    padding: 15px -1px;
+    width: 220px;
+    height: 40px;
+    font-size: 14px;
+    text-align: center;
 }
 
-.btn:hover{
-    background: linear-gradient( hsl(252, 100%, 67%),hsl(241, 81%, 54%) );
+.btn:hover {
+    background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
 }
 
 
-@media (max-width:768px) {
-    .container{
+@media (max-width:376px) {
+    .container {
         display: flex;
         flex-direction: column;
         width: 100%;
         justify-content: space-evenly;
         height: 100%;
-        
+
     }
 
-    .result-card{
+    .result-card {
         border-radius: 0px;
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
     }
-    .msg{
-        padding: 0px 20px;
+
+    .msg {
+        padding: 0px 50px;
+    }
+
+    .btn {
+        width: 290px;
     }
 
 }
